ToolGPS in AgIO send on D7

--- a/SourceCode/AgIO/Source/App.config
+++ b/SourceCode/AgIO/Source/App.config
@@ -154,6 +154,9 @@
             <setting name="setPort_wasRtcmConnected" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="setPort_wasGPS2Connected" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AgIO.Properties.Settings>
     </userSettings>
 </configuration>
