--- a/SourceCode/AgIO/Source/Properties/Settings.settings
+++ b/SourceCode/AgIO/Source/Properties/Settings.settings
@@ -149,5 +149,8 @@
     <Setting Name="setPort_wasRtcmConnected" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="setPort_wasGPS2Connected" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
