GPS to pn.FixTool in AOG

--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -613,6 +613,9 @@
             <setting name="setGPS_dualHeadingOffset" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="setIMU_rollZeroTool" serializeAs="String">
+                <value>0</value>
+            </setting>
         </AgOpenGPS.Properties.Settings>
   </userSettings>
 </configuration>
