--- a/SourceCode/GPS/Properties/Settings.settings
+++ b/SourceCode/GPS/Properties/Settings.settings
@@ -350,5 +350,8 @@
     <Setting Name="setGPS_dualHeadingOffset" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="setIMU_rollZeroTool" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
