--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -616,6 +616,9 @@
             <setting name="setIMU_rollZeroTool" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="setGPS_isGPSTool" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AgOpenGPS.Properties.Settings>
   </userSettings>
 </configuration>
