3 modes tool, veh, tool and veh

--- a/SourceCode/GPS/Properties/Settings.settings
+++ b/SourceCode/GPS/Properties/Settings.settings
@@ -356,5 +356,8 @@
     <Setting Name="setGPS_isGPSTool" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="setGPS_isGPSToolOnly" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
