--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -619,6 +619,9 @@
             <setting name="setGPS_isGPSTool" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="setGPS_isGPSToolOnly" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AgOpenGPS.Properties.Settings>
   </userSettings>
 </configuration>
