--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -252,6 +252,21 @@
             <setting name="setArdMac_user4" serializeAs="String">
                 <value>4</value>
             </setting>
+            <setting name="setTool_P" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="setTool_I" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="setTool_D" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="setTool_G" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="setTool_Counts" serializeAs="String">
+                <value>10</value>
+            </setting>
         </AgOpenGPS.Properties.Vehicle>
         <AgOpenGPS.Properties.YouTurn>
             <setting name="set_youSkipWidth" serializeAs="String">
