--- a/SourceCode/GPS/Properties/Vehicle.settings
+++ b/SourceCode/GPS/Properties/Vehicle.settings
@@ -245,5 +245,20 @@
     <Setting Name="setArdMac_user4" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">4</Value>
     </Setting>
+    <Setting Name="setTool_P" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">20</Value>
+    </Setting>
+    <Setting Name="setTool_I" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="setTool_D" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="setTool_G" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="setTool_Counts" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
