--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -258,14 +258,20 @@
             <setting name="setTool_I" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="setTool_D" serializeAs="String">
+            <setting name="setTool_MinPWM" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="setTool_G" serializeAs="String">
+            <setting name="setTool_LowPWM" serializeAs="String">
                 <value>1</value>
             </setting>
             <setting name="setTool_Counts" serializeAs="String">
                 <value>10</value>
+            </setting>
+            <setting name="setTool_HighPWM" serializeAs="String">
+                <value>120</value>
+            </setting>
+            <setting name="setTool_Offset" serializeAs="String">
+                <value>127</value>
             </setting>
         </AgOpenGPS.Properties.Vehicle>
         <AgOpenGPS.Properties.YouTurn>
