--- a/SourceCode/AgIO/Source/AgIO.csproj
+++ b/SourceCode/AgIO/Source/AgIO.csproj
@@ -287,6 +287,8 @@
     <None Include="btnImages\UpArrow64.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="btnImages\B_GPS2.png" />
+    <None Include="btnImages\B_Autosteer2.png" />
     <None Include="btnImages\Trash.png" />
     <None Include="btnImages\AddNew.png" />
     <None Include="btnImages\Edit.png" />
