steer angle feedback pgn 232

--- a/SourceCode/GPS/AgOpenGPS.csproj
+++ b/SourceCode/GPS/AgOpenGPS.csproj
@@ -805,6 +805,7 @@
   <ItemGroup>
     <Content Include="AOG.ico" />
     <Content Include="aChangeLog.txt" />
+    <None Include="btnImages\Images\z_ToolPointer.png" />
     <None Include="btnImages\Config\GPS_Vehicle.png" />
     <None Include="btnImages\Config\GPS_ToolVehicle.png" />
     <None Include="btnImages\Config\GPS_Tool.png" />
