--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -643,6 +643,12 @@
             <setting name="setGPS_isGPSToolOnly" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="setSpeech_confidence" serializeAs="String">
+                <value>0.94</value>
+            </setting>
+            <setting name="setSpeech_isOn" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AgOpenGPS.Properties.Settings>
   </userSettings>
 </configuration>
