--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -273,6 +273,12 @@
             <setting name="setTool_Offset" serializeAs="String">
                 <value>127</value>
             </setting>
+            <setting name="setTool_antennaHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="setTool_antennaOffset" serializeAs="String">
+                <value>0</value>
+            </setting>
         </AgOpenGPS.Properties.Vehicle>
         <AgOpenGPS.Properties.YouTurn>
             <setting name="set_youSkipWidth" serializeAs="String">
