--- a/SourceCode/GPS/AgOpenGPS.csproj
+++ b/SourceCode/GPS/AgOpenGPS.csproj
@@ -340,6 +340,12 @@
     <Compile Include="Forms\Settings\FormHeadingGraph.Designer.cs">
       <DependentUpon>FormHeadingGraph.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Settings\FormToolSteer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Settings\FormToolSteer.Designer.cs">
+      <DependentUpon>FormToolSteer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Settings\FormSteerGraph.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -676,6 +682,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Guidance\FormSmoothAB.resx">
       <DependentUpon>FormSmoothAB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Settings\FormToolSteer.resx">
+      <DependentUpon>FormToolSteer.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Settings\FormSteer.resx">
       <DependentUpon>FormSteer.cs</DependentUpon>
