new tool form steering

--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -264,19 +264,28 @@
             <setting name="setTool_LowPWM" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="setTool_Counts" serializeAs="String">
+            <setting name="setTool_wasCounts" serializeAs="String">
                 <value>10</value>
             </setting>
             <setting name="setTool_HighPWM" serializeAs="String">
                 <value>120</value>
             </setting>
-            <setting name="setTool_Offset" serializeAs="String">
+            <setting name="setTool_wasOffset" serializeAs="String">
                 <value>127</value>
             </setting>
             <setting name="setTool_antennaHeight" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="setTool_antennaOffset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="setArdToolSteer_setting0" serializeAs="String">
+                <value>56</value>
+            </setting>
+            <setting name="setTool_maxSteerAngle" serializeAs="String">
+                <value>45</value>
+            </setting>
+            <setting name="setTool_sideHillComp" serializeAs="String">
                 <value>0</value>
             </setting>
         </AgOpenGPS.Properties.Vehicle>
