--- a/SourceCode/GPS/Properties/Vehicle.settings
+++ b/SourceCode/GPS/Properties/Vehicle.settings
@@ -257,19 +257,28 @@
     <Setting Name="setTool_LowPWM" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="setTool_Counts" Type="System.Byte" Scope="User">
+    <Setting Name="setTool_wasCounts" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="setTool_HighPWM" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">120</Value>
     </Setting>
-    <Setting Name="setTool_Offset" Type="System.Byte" Scope="User">
+    <Setting Name="setTool_wasOffset" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">127</Value>
     </Setting>
     <Setting Name="setTool_antennaHeight" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="setTool_antennaOffset" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="setArdToolSteer_setting0" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">56</Value>
+    </Setting>
+    <Setting Name="setTool_maxSteerAngle" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">45</Value>
+    </Setting>
+    <Setting Name="setTool_sideHillComp" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
