--- a/SourceCode/AgIO/Source/App.config
+++ b/SourceCode/AgIO/Source/App.config
@@ -17,25 +17,13 @@
                 <value>9600</value>
             </setting>
             <setting name="setUDP_isOn" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="setPort_wasModule1Connected" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="setPort_portNameModule1" serializeAs="String">
-                <value>Mod1**</value>
-            </setting>
-            <setting name="setPort_wasModule3Connected" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="setPort_portNameModule3" serializeAs="String">
-                <value>Auto**</value>
+                <value>True</value>
             </setting>
             <setting name="setIP_thisPort" serializeAs="String">
                 <value>9999</value>
             </setting>
             <setting name="setIP_autoSteerIP" serializeAs="String">
-                <value>192.168.1.255</value>
+                <value>192.168.5.255</value>
             </setting>
             <setting name="setIP_autoSteerPort" serializeAs="String">
                 <value>8888</value>
@@ -97,33 +85,6 @@
             <setting name="setF_workingDirectory" serializeAs="String">
                 <value>Default</value>
             </setting>
-            <setting name="setGPS_SimLatitude" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="setGPS_SimLongitude" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="setComm_commName" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="setPort_portNameGPS2" serializeAs="String">
-                <value>GPS2</value>
-            </setting>
-            <setting name="setPort_baudRateGPS2" serializeAs="String">
-                <value>9600</value>
-            </setting>
-            <setting name="setPort_portNameModule2" serializeAs="String">
-                <value>Mod2</value>
-            </setting>
-            <setting name="setPort_wasModule2Connected" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="setPort_wasIMUConnected" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="setPort_portNameIMU" serializeAs="String">
-                <value>IMU</value>
-            </setting>
             <setting name="setPort_wasGPSConnected" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -154,8 +115,11 @@
             <setting name="setPort_wasRtcmConnected" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="setPort_wasGPS2Connected" serializeAs="String">
-                <value>False</value>
+            <setting name="setIP_localNTRIP" serializeAs="String">
+                <value>192.168.1.10</value>
+            </setting>
+            <setting name="setIP_localAOG" serializeAs="String">
+                <value>192.168.5.5</value>
             </setting>
         </AgIO.Properties.Settings>
     </userSettings>
