--- a/SourceCode/GPS/Properties/Vehicle.settings
+++ b/SourceCode/GPS/Properties/Vehicle.settings
@@ -254,7 +254,7 @@
     <Setting Name="setTool_MinPWM" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="setTool_LowPWM" Type="System.Byte" Scope="User">
+    <Setting Name="setTool_windupLimit" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="setTool_wasCounts" Type="System.Byte" Scope="User">
@@ -276,10 +276,7 @@
       <Value Profile="(Default)">56</Value>
     </Setting>
     <Setting Name="setTool_maxSteerAngle" Type="System.Byte" Scope="User">
-      <Value Profile="(Default)">45</Value>
-    </Setting>
-    <Setting Name="setTool_sideHillComp" Type="System.Byte" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">20</Value>
     </Setting>
   </Settings>
 </SettingsFile>
