--- a/SourceCode/GPS/app.config
+++ b/SourceCode/GPS/app.config
@@ -261,7 +261,7 @@
             <setting name="setTool_MinPWM" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="setTool_LowPWM" serializeAs="String">
+            <setting name="setTool_windupLimit" serializeAs="String">
                 <value>1</value>
             </setting>
             <setting name="setTool_wasCounts" serializeAs="String">
@@ -283,10 +283,7 @@
                 <value>56</value>
             </setting>
             <setting name="setTool_maxSteerAngle" serializeAs="String">
-                <value>45</value>
-            </setting>
-            <setting name="setTool_sideHillComp" serializeAs="String">
-                <value>0</value>
+                <value>20</value>
             </setting>
         </AgOpenGPS.Properties.Vehicle>
         <AgOpenGPS.Properties.YouTurn>
