--- a/SourceCode/AgIO/Source/App.config
+++ b/SourceCode/AgIO/Source/App.config
@@ -121,6 +121,9 @@
             <setting name="setIP_localAOG" serializeAs="String">
                 <value>192.168.5.5</value>
             </setting>
+            <setting name="setUDP_isUsePluginApp" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AgIO.Properties.Settings>
     </userSettings>
 </configuration>
