NtripMeterTimer enabled on off based on data to send

--- a/SourceCode/AgIO/Source/App.config
+++ b/SourceCode/AgIO/Source/App.config
@@ -50,7 +50,7 @@
                 <value>10</value>
             </setting>
             <setting name="setNTRIP_sendToUDPPort" serializeAs="String">
-                <value>0</value>
+                <value>2233</value>
             </setting>
             <setting name="setNTRIP_manualLat" serializeAs="String">
                 <value>53</value>
@@ -122,6 +122,12 @@
                 <value>192.168.5.5</value>
             </setting>
             <setting name="setUDP_isUsePluginApp" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="setNTRIP_sendToSerial" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="setNTRIP_sendToUDP" serializeAs="String">
                 <value>False</value>
             </setting>
         </AgIO.Properties.Settings>
