--- a/SourceCode/AgIO/Source/Properties/Settings.settings
+++ b/SourceCode/AgIO/Source/Properties/Settings.settings
@@ -42,7 +42,7 @@
       <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="setNTRIP_sendToUDPPort" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">2233</Value>
     </Setting>
     <Setting Name="setNTRIP_manualLat" Type="System.Double" Scope="User">
       <Value Profile="(Default)">53</Value>
@@ -117,6 +117,12 @@
       <Value Profile="(Default)">192.168.5.5</Value>
     </Setting>
     <Setting Name="setUDP_isUsePluginApp" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="setNTRIP_sendToSerial" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="setNTRIP_sendToUDP" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
