dot 5 Network check

--- a/SourceCode/AgIO/Source/App.config
+++ b/SourceCode/AgIO/Source/App.config
@@ -130,6 +130,9 @@
             <setting name="setNTRIP_sendToUDP" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="setNTRIP_packetSize" serializeAs="String">
+                <value>256</value>
+            </setting>
         </AgIO.Properties.Settings>
     </userSettings>
 </configuration>
