--- a/SourceCode/AgIO/Source/Properties/Settings.settings
+++ b/SourceCode/AgIO/Source/Properties/Settings.settings
@@ -125,5 +125,8 @@
     <Setting Name="setNTRIP_sendToUDP" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="setNTRIP_packetSize" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">256</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
